--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -15,8 +15,8 @@
 
 tw-story {
   background-color: white;
-  font-family: 'Merriweather', serif;
-  font-size: 140%;
+  font-family: 'Helvetica', sans-serif;
+  font-size: 120%;
   color: black;
 }
 
@@ -48,7 +48,6 @@ tw-icon.redo {
 }
 
 tw-icon.undo {
-  display:none;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.hacks = window.hacks || {
 	_engine : Engine
 };
@@ -60,7 +59,7 @@ window.onmessage = function(e) {
 	if (e.data.toString()=="reload") {
 		hacks.goto('Start');
 	}
-}</script><tw-tag name="Louisa-Email" color="purple"></tw-tag>,<tw-tag name="Sinead-Email" color="red"></tw-tag>,<tw-tag name="dreams" color="red"></tw-tag><tw-passagedata pid="1" name="Email1" tags="Sinead-Email" position="758,453" size="100,100">{
+}</script><tw-tag name="Louisa-Email" color="purple"></tw-tag>,<tw-tag name="Sinead-Email" color="red"></tw-tag>,<tw-tag name="dreams" color="red"></tw-tag><tw-passagedata pid="1" name="Email1" tags="Sinead-Email" position="760,465" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email1&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 1 executed!&quot;); 
@@ -229,7 +228,7 @@ Are you still in school? Are things shutting down in your town? Are you okay? &l
 		audio10.play();
 		});
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="2" name="Email2" tags="Louisa-Email" position="972,450" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="2" name="Email2" tags="Louisa-Email" position="977,467" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email2&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 2 executed!&quot;); 
@@ -312,7 +311,7 @@ Are you still in school? Are things shutting down in your town? Are you okay? &l
 	  });
 &lt;/script&gt;
 ]
-}</tw-passagedata><tw-passagedata pid="3" name="Email3" tags="Sinead-Email" position="1218,444" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="3" name="Email3" tags="Sinead-Email" position="1198,470" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email3&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 3 executed!&quot;); 
@@ -421,7 +420,7 @@ Stay safe and well, &lt;br /&gt;
 		audio3.play();
 		});
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="4" name="Email4" tags="Louisa-Email" position="1440,456" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="4" name="Email4" tags="Louisa-Email" position="1428,471" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email4&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 4 executed!&quot;); 
@@ -499,7 +498,7 @@ Write soon,&lt;br /&gt;
 		  window.top.postMessage(&#39;bg5&#39;, &#39;*&#39;);	
 	  });
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="5" name="Email5" tags="Sinead-Email" position="574,637" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="5" name="Email5" tags="Sinead-Email" position="576,625" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email5&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 5 executed!&quot;); 
@@ -519,17 +518,9 @@ Write soon,&lt;br /&gt;
 }
 
 {
-|p1)[My routine is all over the place - it doesn’t really exist to be fair. Sometimes I wake up at &lt;span class = &quot;clickers&quot; id = &quot;x&quot;&gt;10 am&lt;/span&gt; and every now and then I wake up at &lt;span class = &quot;clickers&quot; id = &quot;y&quot;&gt;2 pm!&lt;/span&gt; Today was a 2 pm start. I literally woke up twenty minutes ago. 
+|p1)[My routine is all over the place - it doesn’t really exist to be fair. Sometimes I wake up at 10 am and every now and then I wake up at 2 pm! Today was a 2 pm start. I literally woke up twenty minutes ago. 
 
 &lt;script&gt;
-	  var $x = document.getElementById(&#39;x&#39;).addEventListener(&quot;click&quot;, function() {
-		  console.log(&quot;bg clicker x clicked!&quot;);
-		  window.top.postMessage(&#39;bgx&#39;, &#39;*&#39;);	
-	  });
-	  var $y = document.getElementById(&#39;y&#39;).addEventListener(&quot;click&quot;, function() {
-		  console.log(&quot;bg clicker y clicked!&quot;);
-		  window.top.postMessage(&#39;bgy&#39;, &#39;*&#39;);
-	  });
 &lt;/script&gt;]
 }
 
@@ -594,12 +585,12 @@ Lots and lots of love, &lt;br /&gt;
 		audio3.play();
 		});
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="6" name="Start" tags="" position="562,444" size="100,100">
+}</tw-passagedata><tw-passagedata pid="6" name="Start" tags="" position="579,468" size="100,100">
 
 =&gt;&lt;=
 
 [[Begin-&gt;Email1]]
-</tw-passagedata><tw-passagedata pid="7" name="pier" tags="" position="273,493" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Email6" tags="Louisa-Email" position="764,640" size="100,100">{
+</tw-passagedata><tw-passagedata pid="7" name="pier" tags="" position="273,493" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Email6" tags="Louisa-Email" position="763,625" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email6&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 6 executed!&quot;); 
@@ -687,7 +678,7 @@ Mom’s back at the restaurant, but they&#39;re only offering take-out. Everyone
 		audio3.play();
 		});
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="9" name="Email7 " tags="Sinead-Email" position="981,625" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="9" name="Email7 " tags="Sinead-Email" position="977,622" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email7&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 7 executed!&quot;); 
@@ -707,7 +698,7 @@ Mom’s back at the restaurant, but they&#39;re only offering take-out. Everyone
 }
 
 {
-|p1)[Hello hello! Really enjoyed our FaceTime call the other night.&lt;br /&gt;
+|p1)[Hello hello! Really enjoyed our FaceTime call the other night.&lt;br /&gt;&lt;br /&gt;
 
 You know how I told you we would soon be able to travel further and more shops would open? Well, today’s that day - Dad’s bookshop opened again! I went in for the afternoon to help him set up, mainly because I’ve been dying to see more things other than &lt;span class = &quot;clickers&quot; id = &quot;audio2&quot;&gt;Dún Laoghaire&lt;/span&gt;. I’ve been cycling around lots with Liam since it’s been so sunny. I can imagine that’s the Louisiana sun coming our way. 
 
@@ -783,7 +774,7 @@ Lots and lots of love, &lt;br /&gt;
 		  window.top.postMessage(&#39;bg8&#39;, &#39;*&#39;);	
 	  });
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="10" name="Email8" tags="Louisa-Email" position="1198,617" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="10" name="Email8" tags="Louisa-Email" position="1199,630" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email8&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 8 executed!&quot;); 
@@ -863,7 +854,7 @@ Love, &lt;br /&gt;
 		  window.top.postMessage(&#39;bg9&#39;, &#39;*&#39;);	
 	  });
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="11" name="Email9 " tags="Sinead-Email" position="1433,628" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="11" name="Email9 " tags="Sinead-Email" position="1430,628" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email9&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 9 executed!&quot;); 
@@ -883,7 +874,7 @@ Love, &lt;br /&gt;
 }
 
 {
-|p1)[I’ve been loving writing these emails so much I did a playwriting summer camp! &lt;br /&gt;
+|p1)[I’ve been loving writing these emails so much I did a playwriting summer camp! &lt;br /&gt;&lt;br /&gt;
 
 An online one, to be exact. It was with (link-repeat: &quot;Fighting Words&quot;)[(open-url: &quot;https://www.fightingwords.ie&quot;)], this writing centre in Dublin that my school went to this year for a workshop. During that week-long camp, I did a modern twist on the Irish myth of &lt;span class = &quot;clickers&quot; id = &quot;audio2&quot;&gt;//Tír na nÓg//&lt;/span&gt;. I was actually a little inspired by //Tuck Everlasting// too after I read it - let me know if you’ve any more book recommendations. 
 
@@ -904,6 +895,12 @@ An online one, to be exact. It was with (link-repeat: &quot;Fighting Words&quot;
 
 
 &lt;script&gt;
+	var audio3 = document.createElement(&#39;audio&#39;);
+	  audio3.src = &#39;sounds/oisin.m4a&#39;;
+	  document.getElementById(&#39;audio3&#39;).addEventListener(&quot;click&quot;, function() {
+	  console.log(&quot;audio played!&quot;);
+	  audio3.play();
+	  });
 	var $20 = document.getElementById(&#39;20&#39;).addEventListener(&quot;click&quot;, function() {
 			  console.log(&quot;gif clicker 20 clicked!&quot;);
 			  window.top.postMessage(&#39;gif20&#39;, &#39;*&#39;);	
@@ -931,11 +928,11 @@ An online one, to be exact. It was with (link-repeat: &quot;Fighting Words&quot;
 |p5)[Seanfhocal of the day: |txf2&gt;[&lt;span class = &quot;clickers&quot; id = &quot;audio4&quot;&gt;“Ní hé lá na báistí lá na bpáistí,”&lt;/span&gt;
 
 &lt;script&gt;
-	var audio3 = document.createElement(&#39;audio&#39;);
-		audio3.src = &#39;sounds/irishproverb5.m4a&#39;;
-		document.getElementById(&#39;audio3&#39;).addEventListener(&quot;click&quot;, function() {
+	var audio4 = document.createElement(&#39;audio&#39;);
+		audio4.src = &#39;sounds/irishproverb5.m4a&#39;;
+		document.getElementById(&#39;audio4&#39;).addEventListener(&quot;click&quot;, function() {
 		console.log(&quot;audio played!&quot;);
-		audio3.play();
+		audio4.play();
 		});
 &lt;/script&gt;] It’s hailing rain outside. &lt;br /&gt;&lt;br /&gt;
 
@@ -952,7 +949,7 @@ Lots and lots and lots of love, &lt;br /&gt;
 		  window.top.postMessage(&#39;bg10&#39;, &#39;*&#39;);	
 	  });
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="12" name="Email10" tags="Louisa-Email" position="577,846" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="12" name="Email10" tags="Louisa-Email" position="574,796" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email10&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 10 executed!&quot;); 
@@ -1023,7 +1020,7 @@ So much love, &lt;br /&gt;
 		  window.top.postMessage(&#39;bg11&#39;, &#39;*&#39;);	
 	  });
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="13" name="Email11" tags="Sinead-Email" position="775,841" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="13" name="Email11" tags="Sinead-Email" position="767,801" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email11&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 11 executed!&quot;); 
@@ -1084,13 +1081,22 @@ So much love, &lt;br /&gt;
 {
 |l3)[(link: &quot;Read more&quot;)[(t8n: &quot;dissolve&quot;)(show: ?p4)(t8n: &quot;dissolve&quot;)(show: ?l4)]]
 
-|p4)[When Liam wasn’t golfing with Dad, we spent most of our time on the beach bodyboarding. We had a fun game of jumping over the &lt;span class = &quot;clickers&quot; id = &quot;audio2&quot;&gt;waves&lt;/span&gt;, but once I got big fright as one of the waves was much taller than me, and I got caught under it. Everything happened really slowly at that moment - it felt like I was under for way longer when I was, struggling to get above the wave. Liam picked me up out of it, and after I coughed and spit out some salty water, I was fine. ]
+|p4)[When Liam wasn’t golfing with Dad, we spent most of our time on the beach bodyboarding. We had a fun game of jumping over the &lt;span class = &quot;clickers&quot; id = &quot;audio2&quot;&gt;waves&lt;/span&gt;, but once I got big fright as one of the waves was much taller than me, and I got caught under it. Everything happened really slowly at that moment - it felt like I was under for way longer when I was, struggling to get above the wave. Liam picked me up out of it, and after I coughed and spit out some salty water, I was fine. 
+
+&lt;script&gt;
+	var audio2 = document.createElement(&#39;audio&#39;);
+	  audio2.src = &#39;sounds/waves.mp3&#39;;
+	  document.getElementById(&#39;audio2&#39;).addEventListener(&quot;click&quot;, function() {
+	  console.log(&quot;audio played!&quot;);
+	  audio2.play();
+	  });
+&lt;/script&gt;]
 }
 
 {
 |l4)[(link: &quot;Read more&quot;)[(t8n: &quot;dissolve&quot;)(show: ?p5)]]
 
-|p5)[Liam and I also paddle boarded sometimes. I loved it, and found it calming. Now as I think about paddling along the water, I shudder a little, because yesterday we heard on the news that two girls (link-repeat: &quot;drifed out to sea in Galway&quot;)[(open-url: &quot;https://www.irishtimes.com/news/ireland/irish-news/it-was-pitch-black-rescued-teenager-describes-night-afloat-with-her-cousin-in-galway-bay-1.4330185&quot;)] while paddle boarding. They were missing all night, but were found this morning. I tried to imagine Liam and I drifting off - what would we do? I feel like Liam would know. I keep thinking back to getting caught under the wave and I’m trying to distract myself by unpacking. 
+|p5)[Liam and I also paddle boarded sometimes. I loved it, and found it calming. Now as I think about paddling along the water, I shudder a little, because yesterday we heard on the news that two girls (link-repeat: &quot;drifted out to sea in Galway&quot;)[(open-url: &quot;https://www.irishtimes.com/news/ireland/irish-news/it-was-pitch-black-rescued-teenager-describes-night-afloat-with-her-cousin-in-galway-bay-1.4330185&quot;)] while paddle boarding. They were missing all night, but were found this morning. I tried to imagine Liam and I drifting off - what would we do? I feel like Liam would know. I keep thinking back to getting caught under the wave and I’m trying to distract myself by unpacking. 
 
 Seanfhocal of the day: |txf1&gt;[&lt;span class = &quot;clickers&quot; id = &quot;audio3&quot;&gt;“Níl aon tinteán mar do thinteán féin,”&lt;/span&gt;
 
@@ -1116,7 +1122,7 @@ Lots and lots and lots of love, &lt;br /&gt;
 		  window.top.postMessage(&#39;bg12&#39;, &#39;*&#39;);	
 	  });
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="14" name="Email12" tags="Louisa-Email" position="1013,851" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="14" name="Email12" tags="Louisa-Email" position="975,798" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email12&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 12 executed!&quot;); 
@@ -1157,7 +1163,7 @@ Lots and lots and lots of love, &lt;br /&gt;
 
 |p3)[Now that Gabby and I can’t pass notes, we dramatically glance at each other across the room. I’d say we’ve gotten good at reading each other’s eyes and cheek bones, but I think we’re just telepathic. She lost her grandpa to the virus so I’ve been trying to cheer her up. Be there. Near. &lt;br /&gt;&lt;br /&gt;
 
-Lunch is outside on the &lt;span class = &quot;clickers&quot; id = &quot;17&quot;&gt;picnic tables&lt;/span&gt; for now. They painted these huge yellow xs on the green rotten wood so we’d follow protocol. It’s like sitting on a target. We’re only allowed to sit four to a table which is definitely gonna start drama. 
+Lunch is outside on the &lt;span class = &quot;clickers&quot; id = &quot;17&quot;&gt;picnic tables&lt;/span&gt; for now. They painted these huge yellow Xs on the green rotten wood so we’d follow protocol. It’s like sitting on a target. We’re only allowed to sit four to a table which is definitely gonna start drama. 
 
 
 &lt;script&gt;
@@ -1182,7 +1188,7 @@ Lunch is outside on the &lt;span class = &quot;clickers&quot; id = &quot;17&quot
 Maybe we should FaceTime one of these days. Soon? &lt;br /&gt;&lt;br /&gt;
 
 &lt;span class = &quot;clickers&quot; id = &quot;audio2&quot;&gt;Sending love,&lt;/span&gt; &lt;br /&gt;
-&lt;span id = &quot;end&quot;&gt;[[Louisa-&gt;Start]]&lt;/span&gt;
+&lt;span id = &quot;end&quot;&gt;[[Louisa-&gt;End]]&lt;/span&gt;
 
 &lt;script&gt;
 	var audio2 = document.createElement(&#39;audio&#39;);
@@ -1191,18 +1197,26 @@ Maybe we should FaceTime one of these days. Soon? &lt;br /&gt;&lt;br /&gt;
 	  console.log(&quot;audio played!&quot;);
 	  audio2.play();
 	  });
-	var $end = document.getElementById(&#39;end&#39;).addEventListener(&quot;click&quot;, function() {
-			  console.log(&quot;story ended!&quot;);
-			  window.top.postMessage(&#39;end&#39;, &#39;*&#39;);	
-		  });
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="15" name="End" tags="" position="1207,851" size="100,100">Fin.
+}</tw-passagedata><tw-passagedata pid="15" name="End" tags="" position="1206,798" size="100,100">=&gt;&lt;=
+
+{
+(event: when time &gt; 1s)[(t8n: &quot;dissolve&quot;)(show: ?p1)]
+(event: when time &gt; 2s)[(t8n: &quot;dissolve&quot;)(show: ?p2)]
+
+|p1)[Thank you for playing 
+&lt;b&gt;&lt;i&gt;Sinead &amp; Louisa.&lt;/i&gt;&lt;/b&gt;]
+}
+
+
+|p2)[&lt;span class = &quot;clickers&quot; id = &quot;end&quot;&gt;Go to credits.&lt;/span&gt;
 
 &lt;script&gt;
-    window.top.postMessage(&#39;end&#39;, &#39;*&#39;);
-&lt;/script&gt;
-
-(reload:)</tw-passagedata></tw-storydata>
+	var $end = document.getElementById(&#39;end&#39;).addEventListener(&quot;click&quot;, function() {
+			  console.log(&quot;ending things!&quot;);
+			  window.top.postMessage(&#39;end&#39;, &#39;*&#39;);	
+		  });
+&lt;/script&gt;]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
