--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -48,6 +48,7 @@ tw-icon.redo {
 }
 
 tw-icon.undo {
+  display:none;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.hacks = window.hacks || {
 	_engine : Engine
 };
