--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ name="jsbutton" src="images/unclicked.svg" width="42" height="42" border="0"
 alt="javascript button" class="img-fluid" id="story1"></a></u></p><span class="popuptext" id="myPopup1"><span class="close">&times;</span> 
             <h1>A Doubled Front</h1>
             <p>This is story number one. It's awesome. (Should be on New York)<br>
-              <a href="doubledfrontstory.html" class="enterButton">enter</a>
+              <a href="doubledfront.html" class="enterButton">enter</a>
             </p>
           </span></div> 
   
