--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
   
           <!-- JS for pop-ups and buttons. Each button is labeled-->
           <!-- Story One -->
-          <div class="popup" onclick="myFunction()"><p><u><a href="#story1" onMouseOver="return changeImage()" onMouseOut= "return changeImageBack()" ><img
-name="jsbutton" src="images/unclicked.svg" width="42" height="42" border="0"
-alt="javascript button" class="img-fluid" id="story1"></a></u></p><span class="popuptext" id="myPopup1"><span class="close">&times;</span> 
-            <h1>A Doubled Front</h1>
-            <p>This is story number one. It's awesome. (Should be on New York)<br>
-              <a href="doubledfront.html" class="enterButton">enter</a>
-            </p>
-          </span></div> 
+          <div class="popup" onclick="myFunction()"><p><u><a href="#story1" onMouseOver="return changeImage()" onMouseOut= "return changeImageBack()" ><img name="jsbutton" src="images/unclicked.svg" width="42" height="42" border="0" alt="javascript button" class="img-fluid" id="story1"></a></u></p>
+            <span class="popuptext" id="myPopup1"><span class="close">&times;</span> 
+              <h1>A Doubled Front</h1>
+              <p>This is story number one. It's awesome. (Should be on New York)<br>
+                <img src="doubled-images/cover.gif" alt="A Doubled Front Interactive Fiction"><br>
+                <a href="doubledfront.html" class="enterButton">enter</a>
+              </p>
+            </span>
+          </div> 
   
           <!-- Story Two -->
           <div class="popup" onclick="myFunction2()"><p><u><a href="#story2" onMouseOver="return changeImage2()" onMouseOut= "return changeImageBack2()" ><img
