--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Logo link -->
         <link rel="shortcut icon" href="images/white-logo.svg"/>
         <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet"> <!-- Maven Pro font -->
+        <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap" rel="stylesheet"> <!-- Maven Pro font -->
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet"> <!-- Playfair font-->
     
             <!-- Global site tag (gtag.js) - Google Analytics -->
