Update sinead bg color

--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -112,39 +112,51 @@
                         var body = document.getElementById("story-body");
                         if (s==1) {
                             body.style.backgroundImage = "url('images/sinead/bg-1.jpg')";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==2) {
                             body.style.backgroundImage = "url('images/sinead/bg-2.jpg')";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==3) {
                             body.style.backgroundImage = "url('images/sinead/bg-3.jpg')";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==4) {
                             body.style.backgroundImage = "url('images/sinead/bg-4.jpg')";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==5) {
                             body.style.backgroundImage = "url('images/sinead/bg-5.jpg')";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==6) {
                             body.style.backgroundImage = "url('images/sinead/bg-6.jpg')";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==7) {
                             body.style.backgroundImage = "url('images/sinead/bg-7.jpg')";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==8) {
                             body.style.backgroundImage = "url('images/sinead/bg-8.jpg')";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==9) {
                             body.style.backgroundImage = "url('images/sinead/bg-9.jpg')";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==10) {
                             body.style.backgroundImage = "url('images/sinead/bg-10.jpg')";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==11) {
                             body.style.backgroundImage = "url('images/sinead/bg-11.jpg')";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==12) {
                             body.style.backgroundImage = "url('images/sinead/bg-12.jpg')";
+                            body.style.backgroundColor = "#541211";
                         }
                     }
                     else if (semail=="email") {
@@ -248,11 +260,10 @@
                     }
                 }
 
-                /*
                 function reload() {
                     var x = document.getElementById('twine-embed').contentWindow;
                     x.postMessage('reload', '*');
-                } */
+                } 
 
                 window.onbeforeunload = function(){
                      return 'Your progress will not be saved!';
