--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -591,7 +591,11 @@ Lots and lots of love, &lt;br /&gt;
 =&gt;&lt;=
 
 [[Begin-&gt;Email1]]
-</tw-passagedata><tw-passagedata pid="7" name="pier" tags="" position="273,493" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Email6" tags="Louisa-Email" position="763,625" size="100,100">{
+
+&lt;script&gt;
+  window.top.postMessage(&#39;start&#39;, &#39;*&#39;);
+  console.log(&quot;started!&quot;);
+&lt;/script&gt;</tw-passagedata><tw-passagedata pid="7" name="pier" tags="" position="273,493" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="8" name="Email6" tags="Louisa-Email" position="763,625" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email6&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 6 executed!&quot;); 
@@ -1199,7 +1203,7 @@ Maybe we should FaceTime one of these days. Soon? &lt;br /&gt;&lt;br /&gt;
 	  audio2.play();
 	  });
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="15" name="End" tags="" position="1206,798" size="100,100">=&gt;&lt;=
+}</tw-passagedata><tw-passagedata pid="15" name="End" tags="" position="1205,798" size="100,100">=&gt;&lt;=
 
 {
 (event: when time &gt; 1s)[(t8n: &quot;dissolve&quot;)(show: ?p1)]
