--- a/submit.html
+++ b/submit.html
@@ -42,7 +42,7 @@
         <!-- Short paragraph -->
         <div class="row justify-content-center">
             <div class="col-sm-10 col-md-6 mxml-5 text-justify short">
-              <p>Feel free to send us a msg with your story concept, and we'll reach out to take it further (if we like it)</p>
+              <p>Feel free to send us a message with your story idea, and we'll reach out to take it further!</p>
             </div>
         </div>
         <!-- Submit Form -->
@@ -93,7 +93,7 @@
 
         <!-- Navigation Bar-->
         <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-bottom">
-            <a class="navbar-brand" href="/index.html"><img src="images/favicon_io/maroon-logo.png" style="width:40px"></a>
+            <a class="navbar-brand" href="/index.html"><img src="images/favicon_io/maroon-logo.png" style="width:70px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
