--- a/i-see-you-1.html
+++ b/i-see-you-1.html
@@ -39,7 +39,7 @@ tw-icon.redo {
 tw-icon.undo {
   display:none;
 }
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Introduction" tags="" position="641.6666666666666,236" size="200,100">|p1&gt;[The sun is just beginning to peek through the curtains. You wipe your eyes in a groggy haze and pick up your phone. It’s been a tireless night of helping your eldest daughter with her college applications and assisting your youngest with her algebra homework.
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Introduction" tags="" position="641,236" size="200,100">|p1&gt;[The sun is just beginning to peek through the curtains. You wipe your eyes in a groggy haze and pick up your phone. It’s been a tireless night of helping your eldest daughter with her college applications and assisting your youngest with her algebra homework.
 
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/1.jpg&quot; height=&quot;400&quot; alt=&quot;kitchen scene&quot;&gt; &lt;/center&gt;
 
@@ -84,7 +84,7 @@ tw-icon.undo {
 
 |p2)[It reads (text-color: #4a8540)[98.6ºF]. She motions for you to further enter the hospital.
 
-[[Continue-&gt;Entry]]]</tw-passagedata><tw-passagedata pid="7" name="Gloves" tags="" position="546.6666666666666,972.3333333333334" size="100,100">|p1&gt;[You’re already equipped with your protective equipment. The N95 mask and face shield moistens with a combination of coffee breath and sweat. You’ve been instructed that gloves aren’t mandatory if you wash your hands regularly. But the bunches of blue latex surgical gloves are in your vicinity. You reach to slap on a pair.
+[[Continue-&gt;Entry]]]</tw-passagedata><tw-passagedata pid="7" name="Gloves" tags="" position="546,972" size="100,100">|p1&gt;[You’re already equipped with your protective equipment. The N95 mask and face shield moistens with a combination of coffee breath and sweat. You’ve been instructed that gloves aren’t mandatory if you wash your hands regularly. But the bunches of blue latex surgical gloves are in your vicinity. You reach to slap on a pair.
 
 (link: &quot;Continue&quot;)[(t8n: &quot;dissolve&quot;)(show: ?p2)]
 
@@ -206,7 +206,7 @@ You pause for a second at the glove box…
 |p2&gt;[[[Gloves, always-&gt;Gloves]]
 
 [[No need for gloves today-&gt;No gloves]]]</tw-passagedata><tw-passagedata pid="18" name="Title" tags="" position="693,82" size="100,100">
-&lt;center&gt; &lt;img src=&quot;images/i-see-you/title.gif&quot; width=&quot;400&quot; height=&quot;400&quot; alt=&quot;cover image&quot;&gt; &lt;/center&gt;
+&lt;center&gt; &lt;img src=&quot;images/i-see-you/title-1.gif&quot; width=&quot;400&quot; height=&quot;400&quot; alt=&quot;cover image&quot;&gt; &lt;/center&gt;
 =&gt;&lt;=
 [[Begin-&gt;Introduction]]</tw-passagedata><tw-passagedata pid="19" name="Arrival2" tags="" position="765,525" size="100,100">At the hospital entrance, the nurse gives you a mandatory questionnaire to fill out. It&#39;s to ensure that you don&#39;t have any symptoms of the virus.
 
@@ -214,7 +214,7 @@ You pause for a second at the glove box…
 
 [[You have been feeling slightly feverish...-&gt;Symptoms]]
 
-[[Nothing more than the usual sleep deprivation...-&gt;No Symptoms2]]</tw-passagedata><tw-passagedata pid="20" name="No Symptoms2" tags="" position="766.3333333333334,680.3333333333334" size="100,100">After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead and it reads (text-color: #4a8540)[98.6ºF]. She motions for you to further enter the hospital. 
+[[Nothing more than the usual sleep deprivation...-&gt;No Symptoms2]]</tw-passagedata><tw-passagedata pid="20" name="No Symptoms2" tags="" position="766,680" size="100,100">After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead and it reads (text-color: #4a8540)[98.6ºF]. She motions for you to further enter the hospital. 
 
 As you enter the hospital, Dr. Monroe, an attending physician, glares at you as you pass him in the lobby. Your lateness has delayed his surgical case by a few hours.
 
