I-See-You Cover GIF

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@ alt="javascript button" class="img-fluid" id="story2"></a></u></p><span class="p
 name="jsbutton3" src="images/unclicked.svg" width="42" height="42" border="0"
 alt="javascript button" class="img-fluid" id="story3"></a></u></p><span class="popuptext" id="myPopup3"><span class="close">&times;</span>
             <h1>I See You</h1>
-            <p>This is story number three. It's awesome. (Should be over Philly-ish. This placement might be tricky)<br>
-          <a href="i-see-you-1.html" class="enterButton">enter</a>
+            <p>This is story number three. It's awesome. (Should be over Philly-ish. This placement might be tricky)<br><br>
+              <img src="images/i-see-you/title-1.gif" alt="A Doubled Front Interactive Fiction"><br>
+              <a href="i-see-you-1.html" class="enterButton">enter</a>
             </p>
           </span></div> 
   
