I-See-You update

--- a/about.html
+++ b/about.html
@@ -51,14 +51,15 @@
         <!-- Numbers -->
         <div class="row justify-content-center numbers">
             <div class="col-3 text-center digits">
-                <h1>13</h1>
-                <p>active members</p>
+                <h1 style = "line-height: normal">13</h1>
+                <p style = "font-size: 200%">active members</p>
             </div>
             <div class="col-3 text-center digits">
-                <h1>9</h1>
-                <p>unique countries</p>
+                <h1 style = "line-height: normal">9</h1>
+                <p style = "font-size: 200%">unique countries</p>
             </div>
         </div>
+        
         <!-- Contact Us-->
         <div class="row justify-content-center">
           <div class="col-md-1 col-1 text-justify contact">
