--- a/i-see-you-1.html
+++ b/i-see-you-1.html
@@ -29,7 +29,16 @@ tw-link:hover {
   text-shadow: 0.5px 0.5px 2px #9c1d34;
 }
 
-img {
+.clickers {
+  color: #EA638C;
+  font-weight: bold;
+}
+
+.clickers:hover {
+  color: #DC042C;
+  text-shadow: 0.5px 0.5px 2px #9c1d34;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 tw-icon.redo {
@@ -39,13 +48,61 @@ tw-icon.redo {
 tw-icon.undo {
   display:none;
 }
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Introduction" tags="" position="641,236" size="200,100">|p1&gt;[The sun is just beginning to peek through the curtains. You wipe your eyes in a groggy haze and pick up your phone. It’s been a tireless night of helping your eldest daughter with her college applications and assisting your youngest with her algebra homework.
 
-&lt;center&gt; &lt;img src=&quot;images/i-see-you/1.jpg&quot; height=&quot;400&quot; alt=&quot;kitchen scene&quot;&gt; &lt;/center&gt;
+img {
+  display: block;
+  margin: auto;
+  text-align: center;
+}
+
+.checks {
+  -webkit-appearance: none;
+	background-color: #f5cbd4;
+	border: 1px solid #cacece;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 9px;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+}
+
+.checks:active, .checks:checked:active {
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+
+.checks:checked {
+	background-color: #fca4b7;
+	border: 1px solid #adb8c0;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+	color: #99a1a7;
+}
+
+.checks:checked:after {
+	content: '\2714';
+	font-size: 14px;
+	position: absolute;
+	top: 0px;
+	left: 3px;
+	color: #992e45;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.hacks = window.hacks || {
+	_engine : Engine
+};
+
+hacks.goto = hacks._engine.showPassage;
+
+/*
+window.onmessage = function(e) {
+	if (e.data.toString()=="reload") {
+		hacks.goto('Start');
+	} 
+}
+*/</script><tw-passagedata pid="1" name="Introduction" tags="" position="641,236" size="200,100">|p1&gt;[The sun is just beginning to peek through the curtains. You wipe your eyes in a groggy haze and pick up your phone. It’s been a tireless night of helping your eldest daughter with her college applications and assisting your youngest with her algebra homework.
 
 (link: &quot;Continue&quot;)[(t8n: &quot;dissolve&quot;)(show: ?p2)]]
 
-|p2)[Your &lt;u&gt;microwave&lt;/u&gt; is out of service and won’t be fixed anytime soon. Weather reports suggest a large storm with hurricane-level winds will hit later on in the week. Your mind is clouded with tasks you need to complete and your phone grows heavy in your hand. 
+|p2)[&lt;center&gt; &lt;img src=&quot;images/i-see-you/1.jpg&quot; height=&quot;400&quot; alt=&quot;kitchen scene&quot;&gt; &lt;/center&gt;
+
+Your &lt;u&gt;microwave&lt;/u&gt; is out of service and won’t be fixed anytime soon. Weather reports suggest a large storm with hurricane-level winds will hit later on in the week. Your mind is clouded with tasks you need to complete and your phone grows heavy in your hand. 
 
 [[Wake up]]
 
@@ -55,30 +112,74 @@ tw-icon.undo {
 
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/2.jpg&quot; height=&quot;400&quot; alt=&quot;breakfast&quot;&gt; &lt;/center&gt;</tw-passagedata><tw-passagedata pid="3" name="Snooze until 7:00AM, you need another hour" tags="" position="769,391" size="100,100">You need just one more hour of sleep. You have time to pick up a coffee on the way to work and that’s all––but at least you’ll have one more hour. It’ll be tight but you might just make in time as the OR opens at 7:30AM.
 
-[[Continue-&gt;Arrival2]]</tw-passagedata><tw-passagedata pid="4" name="Arrival" tags="" position="602,525" size="100,100">At the hospital entrance, the nurse gives you a mandatory questionnaire to fill out. It&#39;s to ensure that you don&#39;t have any symptoms of the virus. 
+[[Continue-&gt;Arrival2]]</tw-passagedata><tw-passagedata pid="4" name="Arrival" tags="" position="603.6666666666667,530" size="100,100">At the hospital entrance, the nurse gives you a mandatory questionnaire to fill out. It&#39;s to ensure that you don&#39;t have any symptoms of the virus. 
 
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/3.jpg&quot; height=&quot;400&quot; alt=&quot;wearing gloves&quot;&gt; &lt;/center&gt;
 
 {
-&lt;input type=&quot;checkbox&quot; id=&quot;symptom1&quot; value=&quot;fever&quot;&gt;
-	&lt;label for=&quot;vehicle1&quot;&gt; Fever &lt;/label&gt;&lt;br&gt;
-&lt;input type=&quot;checkbox&quot; id=&quot;symptom2&quot; value=&quot;cough&quot;&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom1&quot; value=&quot;fever&quot;&gt;
+	&lt;label for=&quot;vehicle1&quot;&gt; Fever of 100° F or above &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom2&quot; value=&quot;cough&quot;&gt;
 	&lt;label for=&quot;vehicle2&quot;&gt; Dry Cough &lt;/label&gt;&lt;br&gt;
-&lt;input type=&quot;checkbox&quot; id=&quot;symptom3&quot; value=&quot;tired&quot;&gt;
-	&lt;label for=&quot;vehicle3&quot;&gt; Tiredness &lt;/label&gt;&lt;br&gt;
-&lt;input type=&quot;checkbox&quot; id=&quot;symptom4&quot; value=&quot;none&quot;&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom3&quot; value=&quot;chills&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Chills &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom4&quot; value=&quot;aches&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Muscle aches &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom5&quot; value=&quot;throat&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Sore throat &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom6&quot; value=&quot;nausea&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Nausea, vomiting or diarrhea &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom7&quot; value=&quot;headache&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Headache &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;no-symptom&quot; value=&quot;none&quot;&gt;
 	&lt;label for=&quot;vehicle3&quot;&gt; No symptoms &lt;/label&gt;&lt;br&gt;
 	
 &lt;script&gt;
-
+	var none = document.getElementById(&#39;no-symptom&#39;);
+	none.onclick = function() {
+	  console.log(&quot;none slapped!&quot;);
+		if (none.checked == true) {
+			for (i=1; i&lt;8; i++) {
+				var symp = document.getElementById(&#39;symptom&#39;+i);
+				console.log(&quot;symptom &quot; + i + &quot; unchecked&quot;);
+				symp.checked = false;
+				symp.disabled = true;
+			}
+		}
+		else {
+			for (i=1; i&lt;8; i++) {
+				var symp = document.getElementById(&#39;symptom&#39;+i);
+				symp.disabled = false;
+			}
+		}
+	}
 &lt;/script&gt;
 }
+{
+&lt;span class = &quot;clickers&quot; id = &quot;cont&quot;&gt; Continue &lt;/span&gt; 
 
-[[You have been feeling slightly feverish...-&gt;Symptoms]]
+&lt;script&gt;
+	var cont = document.getElementById(&#39;cont&#39;);
+	var none = document.getElementById(&#39;no-symptom&#39;);
+	cont.onclick = function() {
+		if($(&#39;input[type=&quot;checkbox&quot;]:checked&#39;).length) {
+			console.log(&quot;at least one checked&quot;);
+			if (none.checked == true) {
+				hacks.goto(&#39;No symptoms&#39;);
+			}
+			else {
+				hacks.goto(&#39;Symptoms&#39;);
+			}
+		}
+		else {
+			console.error(&quot;no checkbox checked&quot;);
+			alert(&quot;Select an option!&quot;);
+		}
+	}
+&lt;/script&gt;
+}</tw-passagedata><tw-passagedata pid="5" name="Symptoms" tags="" position="312,471" size="100,100">The nurse looks down and reviews your questionnaire on her screen, “I’m sorry, but I can’t let you into the hospital. Please go home and only come back when you are feeling better and symptom free.”
 
-[[Nothing more than the usual sleep deprivation...-&gt;No symptoms]]</tw-passagedata><tw-passagedata pid="5" name="Symptoms" tags="" position="312,471" size="100,100">The nurse looks down and reviews your questionnaire on her screen, “I’m sorry, but I can’t let you into the hospital. Please go home and only come back when you are feeling better and symptom free.”
-
-[[Quarantine and rest for 2 weeks-&gt;2weeks]]</tw-passagedata><tw-passagedata pid="6" name="No symptoms" tags="" position="605,680" size="100,100">|p1&gt;[After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead.
+[[Quarantine and rest for 2 weeks-&gt;2weeks]]</tw-passagedata><tw-passagedata pid="6" name="No symptoms" tags="" position="606.6666666666666,680" size="100,100">|p1&gt;[After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead.
 
 (link: &quot;Continue&quot;)[(t8n: &quot;dissolve&quot;)(show: ?p2)]]
 
@@ -98,9 +199,9 @@ tw-icon.undo {
 	
 His eyes crease into small crescents, and you think he’s smiling, but it’s hard to tell due to the N95 mask obscuring his mouth. He has already been spoken to about the surgery and has reconfirmed his consent. Once you complete your pre-operative note, it’s time to decide what type of anesthesia your patient will be receiving.
 	
-[[Stick with block anesthesia-&gt;Block anesthesia]]
+[[Stick with block anesthesia.-&gt;Block anesthesia]]
 
-[[Let&#39;s try intubation-&gt;Intubation]]]</tw-passagedata><tw-passagedata pid="8" name="No gloves" tags="" position="838,981" size="100,100">|p1&gt;[You’re already equipped with your protective equipment. The N95 mask and face shield moistens with a combination of coffee breath and sweat. You’ve been instructed that gloves aren’t mandatory if you wash your hands regularly. You remove your necklace and hook your wedding ring onto the chain. Hot water begins to spurt out of the sink and you adjust the faucet so that the temperature does not damage your skin. 
+[[Let&#39;s try intubation.-&gt;Intubation]]]</tw-passagedata><tw-passagedata pid="8" name="No gloves" tags="" position="838,981" size="100,100">|p1&gt;[You’re already equipped with your protective equipment. The N95 mask and face shield moistens with a combination of coffee breath and sweat. You’ve been instructed that gloves aren’t mandatory if you wash your hands regularly. You remove your necklace and hook your wedding ring onto the chain. Hot water begins to spurt out of the sink and you adjust the faucet so that the temperature does not damage your skin. 
 
 You pump some antimicrobial soap onto the palm of your hand and start timing. First you scrub each side of each finger, then between your fingers, and finally the back and front of your hands. You make sure to clean under your fingernails before proceeding to scrub your arms. Your two minutes of cleaning are now complete! As you’re drying off, you feel your phone vibrates in your scrub pocket…but you know better than to touch an unclean surface. This, however, will hardly be the last time you wash your hands today.
 
@@ -114,9 +215,9 @@ You pump some antimicrobial soap onto the palm of your hand and start timing. Fi
 	
 His eyes crease into small crescents, and you think he’s smiling, but it’s hard to tell due to the N95 mask obscuring his mouth. He has already been spoken to about the surgery and has reconfirmed his consent. Once you complete your pre-operative note, it’s time to decide what type of anesthesia your patient will be receiving.
 
-[[Stick with block anesthesia-&gt;Block anesthesia]]
+[[Stick with block anesthesia.-&gt;Block anesthesia]]
 
-[[Let&#39;s try intubation-&gt;Intubation]]]</tw-passagedata><tw-passagedata pid="9" name="Block anesthesia" tags="" position="601,1142" size="100,100">It’s standard procedure. The anesthesiologist, Dr. Carter, enters the room and you inform him that you have opted for epidural anesthesia to sedate the area—rendering the nerve impulses from the lower spinal segments numb and blocking pain in your patient. Dr. Carter uses an ultrasound machine to identify the major nerves and proceeds to inject lidocaine into them. He briefly removes Mr. Jones’ N95 mask and places a nasal cannula over his nose and mouth. With your patient’s leg becoming more numb by the second, he is now ready for surgery.
+[[Let&#39;s try intubation.-&gt;Intubation]]]</tw-passagedata><tw-passagedata pid="9" name="Block anesthesia" tags="" position="601,1142" size="100,100">It’s standard procedure. The anesthesiologist, Dr. Carter, enters the room and you inform him that you have opted for epidural anesthesia to sedate the area—rendering the nerve impulses from the lower spinal segments numb and blocking pain in your patient. Dr. Carter uses an ultrasound machine to identify the major nerves and proceeds to inject lidocaine into them. He briefly removes Mr. Jones’ N95 mask and places a nasal cannula over his nose and mouth. With your patient’s leg becoming more numb by the second, he is now ready for surgery.
 
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/7.jpg&quot; height=&quot;400&quot; alt=&quot;wearing gloves&quot;&gt; &lt;/center&gt;
 
@@ -205,16 +306,74 @@ You pause for a second at the glove box…
 
 |p2&gt;[[[Gloves, always-&gt;Gloves]]
 
-[[No need for gloves today-&gt;No gloves]]]</tw-passagedata><tw-passagedata pid="18" name="Title" tags="" position="693,82" size="100,100">
-&lt;center&gt; &lt;img src=&quot;images/i-see-you/title-1.gif&quot; width=&quot;400&quot; height=&quot;400&quot; alt=&quot;cover image&quot;&gt; &lt;/center&gt;
+[[No need for gloves today-&gt;No gloves]]]</tw-passagedata><tw-passagedata pid="18" name="Title" tags="" position="693,82" size="100,100">&lt;img src=&quot;images/i-see-you/title-1.gif&quot; height=&quot;500&quot; alt=&quot;cover image&quot;&gt;
 =&gt;&lt;=
-[[Begin-&gt;Introduction]]</tw-passagedata><tw-passagedata pid="19" name="Arrival2" tags="" position="765,525" size="100,100">At the hospital entrance, the nurse gives you a mandatory questionnaire to fill out. It&#39;s to ensure that you don&#39;t have any symptoms of the virus.
+[[Begin-&gt;Introduction]]</tw-passagedata><tw-passagedata pid="19" name="Arrival2" tags="" position="768.3333333333334,531.6666666666666" size="100,100">At the hospital entrance, the nurse gives you a mandatory questionnaire to fill out. It&#39;s to ensure that you don&#39;t have any symptoms of the virus. 
 
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/3.jpg&quot; height=&quot;400&quot; alt=&quot;wearing gloves&quot;&gt; &lt;/center&gt;
 
-[[You have been feeling slightly feverish...-&gt;Symptoms]]
+{
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom1&quot; value=&quot;fever&quot;&gt;
+	&lt;label for=&quot;vehicle1&quot;&gt; Fever of 100° F or above &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom2&quot; value=&quot;cough&quot;&gt;
+	&lt;label for=&quot;vehicle2&quot;&gt; Dry Cough &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom3&quot; value=&quot;chills&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Chills &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom4&quot; value=&quot;aches&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Muscle aches &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom5&quot; value=&quot;throat&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Sore throat &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom6&quot; value=&quot;nausea&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Nausea, vomiting or diarrhea &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;symptom7&quot; value=&quot;headache&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; Headache &lt;/label&gt;&lt;br&gt;
+&lt;input type=&quot;checkbox&quot; class = &quot;checks&quot; id=&quot;no-symptom&quot; value=&quot;none&quot;&gt;
+	&lt;label for=&quot;vehicle3&quot;&gt; No symptoms &lt;/label&gt;&lt;br&gt;
+	
+&lt;script&gt;
+	var none = document.getElementById(&#39;no-symptom&#39;);
+	none.onclick = function() {
+	  console.log(&quot;none slapped!&quot;);
+		if (none.checked == true) {
+			for (i=1; i&lt;8; i++) {
+				var symp = document.getElementById(&#39;symptom&#39;+i);
+				console.log(&quot;symptom &quot; + i + &quot; unchecked&quot;);
+				symp.checked = false;
+				symp.disabled = true;
+			}
+		}
+		else {
+			for (i=1; i&lt;8; i++) {
+				var symp = document.getElementById(&#39;symptom&#39;+i);
+				symp.disabled = false;
+			}
+		}
+	}
+&lt;/script&gt;
+}
+{
+&lt;span class = &quot;clickers&quot; id = &quot;cont&quot;&gt; Continue &lt;/span&gt; 
 
-[[Nothing more than the usual sleep deprivation...-&gt;No Symptoms2]]</tw-passagedata><tw-passagedata pid="20" name="No Symptoms2" tags="" position="766,680" size="100,100">After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead and it reads (text-color: #4a8540)[98.6ºF]. She motions for you to further enter the hospital. 
+&lt;script&gt;
+	var cont = document.getElementById(&#39;cont&#39;);
+	var none = document.getElementById(&#39;no-symptom&#39;);
+	cont.onclick = function() {
+		if($(&#39;input[type=&quot;checkbox&quot;]:checked&#39;).length) {
+			console.log(&quot;at least one checked&quot;);
+			if (none.checked == true) {
+				hacks.goto(&#39;No symptoms2&#39;);
+			}
+			else {
+				hacks.goto(&#39;Symptoms&#39;);
+			}
+		}
+		else {
+			console.error(&quot;no checkbox checked&quot;);
+			alert(&quot;Select an option!&quot;);
+		}
+	}
+&lt;/script&gt;
+}</tw-passagedata><tw-passagedata pid="20" name="No symptoms2" tags="" position="766,680" size="100,100">After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead and it reads (text-color: #4a8540)[98.6ºF]. She motions for you to further enter the hospital. 
 
 As you enter the hospital, Dr. Monroe, an attending physician, glares at you as you pass him in the lobby. Your lateness has delayed his surgical case by a few hours.
 
