about page adjustments complete

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <div class="container-fluid">
         <!-- Title -->
         <div class="row justify-content-center">
-            <div class="col-8 mxml-5">
+            <div class="col-md-8 col-10 mxml-5">
               <img src="/images/about.svg" class="img-fluid mx-auto d-block title" alt="Responsive image">
             </div>
         </div>
@@ -50,27 +50,28 @@
       </div>
         <!-- Numbers -->
         <div class="row justify-content-center numbers">
-            <div class="col-3 text-center digits">
+            <div class="col-md-3 text-center digits">
                 <h1 style = "line-height: normal">13</h1>
-                <p style = "font-size: 200%">active members</p>
+                <p>active members</p>
             </div>
-            <div class="col-3 text-center digits">
+            <div class="col-md-3 text-center digits">
                 <h1 style = "line-height: normal">9</h1>
-                <p style = "font-size: 200%">unique countries</p>
+                <p>unique countries</p>
             </div>
         </div>
         
         <!-- Contact Us-->
         <div class="row justify-content-center">
-          <div class="col-md-1 col-1 text-justify contact">
-              <img src="images/mail.svg" class="icon">
-              <img src="images/facebook.svg" class="icon">
-              <img src="images/instagram.svg" class="icon">
+          <div class="col-md-4 col-8 mxml-5">
+            <img src="/images/contact-us.svg" class="img-fluid mx-auto d-block contact-head" alt="Responsive image">
           </div>
-          <div class="col-md-3 col-8 text-justify contact">
-              <h4><a href="mailto:columbiaintfic@gmail.com">columbiaintfic@gmail.com</a></h4>
-              <h4><a href="https://www.facebook.com/Columbia-Int-Fic-100622075104841">Columbia Int Fic</a></h4>
-              <h4><a href="https://www.instagram.com/columbiaintfic/">Columbia Int Fic</a></h4>
+      </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-12 col-12 text-center contact">
+            <a href="mailto:columbiaintfic@gmail.com"><img src="images/mail.svg" class="icon"></a>
+            <a href="https://www.facebook.com/Columbia-Int-Fic-100622075104841"><img src="images/facebook.svg" class="icon"></a>
+            <a href="https://www.instagram.com/columbiaintfic/"><img src="images/instagram.svg" class="icon"></a>
           </div>
         </div>
       </div>
