--- a/credits.html
+++ b/credits.html
@@ -28,22 +28,22 @@
             <section class="counters" id="counters"> 
                 <div class="counter-block">
                     <p>there are</p>
-                    <h3><!-- <script language="JavaScript">var fhs = document.createElement('script');var fhs_id = "5645244";
+                    <h3><script language="JavaScript">var fhs = document.createElement('script');var fhs_id = "5645244";
                     var ref = (''+document.referrer+'');var pn =  window.location;var w_h = window.screen.width + " x " + window.screen.height;
                     fhs.src = "//freehostedscripts.net/ocounter.php?site="+fhs_id+"&e1=&e2=&r="+ref+"&wh="+w_h+"&a=1&pn="+pn+"";
                     document.head.appendChild(fhs);document.write("<span id='o_"+fhs_id+"'></span>");
-                    </script> --> 2
+                    </script> 
                     </h3>
                     <p>users online</p>
                 </div>
                 <div class="counter-block">
                     <p>there have been</p>
-                    <h3><!-- <script language="JavaScript">var fhsh = document.createElement('script');var fhs_id_h = "3353560";
+                    <h3> <script language="JavaScript">var fhsh = document.createElement('script');var fhs_id_h = "3353560";
                     fhsh.src = "//freehostedscripts.net/ocount.php?site="+fhs_id_h+"&name=&a=1";
                     document.head.appendChild(fhsh);document.write("<span id='h_"+fhs_id_h+"'></span>");
-                    </script> --> 100
+                    </script>
                     </h3>
-                    <p>total visits </p>
+                    <p> visits </p>
                 </div>
                 <!-- prompt space to credits-->
             </section>
